# SnapEDA

./: README.md  mkdocs.yml  pyproject.toml
docs/: examples.md  index.md  tutorial.md  usage.md
snapeda/: __init__.py  cli.py  eda.py  io.py  render.py  sampling.py  summary.py
tests/: conftest.py  test_eda.py  test_sampling.py
