[project]
name = "snapeda"
version = "0.1.0"
description = "Simple, fast, memory-efficient Auto EDA with Polars"
authors = [{ name = "SnapEDA", email = "dev@example.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "polars>=0.20",
  "rich>=13"
]

[project.optional-dependencies]
dev = [
  "pytest>=7"
]

[project.scripts]
snapeda = "snapeda.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
